added some code

--- a/StockPricePrediction.ipynb
+++ b/StockPricePrediction.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "      <td>7.686786</td>\n",
        "      <td>7.526786</td>\n",
        "      <td>7.534643</td>\n",
-       "      <td>6.404013</td>\n",
+       "      <td>6.404015</td>\n",
        "      <td>552160000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -117,7 +117,7 @@
        "      <td>7.571429</td>\n",
        "      <td>7.466429</td>\n",
        "      <td>7.570714</td>\n",
-       "      <td>6.434673</td>\n",
+       "      <td>6.434672</td>\n",
        "      <td>447610800</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -129,12 +129,12 @@
        "Date                                                                    \n",
        "2010-01-04  7.622500  7.660714  7.585000  7.643214   6.496295  493729600\n",
        "2010-01-05  7.664286  7.699643  7.616071  7.656429   6.507526  601904800\n",
-       "2010-01-06  7.656429  7.686786  7.526786  7.534643   6.404013  552160000\n",
+       "2010-01-06  7.656429  7.686786  7.526786  7.534643   6.404015  552160000\n",
        "2010-01-07  7.562500  7.571429  7.466071  7.520714   6.392176  477131200\n",
-       "2010-01-08  7.510714  7.571429  7.466429  7.570714   6.434673  447610800"
+       "2010-01-08  7.510714  7.571429  7.466429  7.570714   6.434672  447610800"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "(3405, 6)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +193,244 @@
     "plt.xlabel('Date')\n",
     "plt.ylabel('Price USD ($)')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2724"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a new dataframe with only 'Close' column\n",
+    "data = df.filter(['Close'])\n",
+    "\n",
+    "# Converte the dataframe to np array\n",
+    "dataset = data.values\n",
+    "\n",
+    "#Get the number of rows to train the models on. Using 80% of the data for training\n",
+    "training_data_len = math.ceil(len(dataset) * .8)\n",
+    "\n",
+    "training_data_len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00419155],\n",
+       "       [0.00426217],\n",
+       "       [0.0036113 ],\n",
+       "       ...,\n",
+       "       [0.97755346],\n",
+       "       [0.9816686 ],\n",
+       "       [0.98247031]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Scale the data\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "scaled_data = scaler.fit_transform(dataset)\n",
+    "\n",
+    "scaled_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the training dataset\n",
+    "# Create the scaled the training dataset\n",
+    "train_data = scaled_data[0:training_data_len, :]\n",
+    "\n",
+    "# Split the data into x_train, y_train\n",
+    "x_train = []\n",
+    "y_train = []\n",
+    "\n",
+    "for i in range(60, len(train_data)):\n",
+    "    x_train.append(train_data[i-60:i, 0])\n",
+    "    y_train.append(train_data[i, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converte the x_train, y_train to np array\n",
+    "x_train, y_train = np.array(x_train), np.array(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2664, 60)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking the shape\n",
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2664, 60, 1)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reshape the data into 3D for LSTM model\n",
+    "x_train = np.reshape(x_train, (x_train.shape[0], x_train.shape[1], 1))\n",
+    "x_train.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build the LSTM model\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(50, return_sequences=True, input_shape=(x_train.shape[1], 1)))\n",
+    "model.add(LSTM(50, return_sequences=False))\n",
+    "model.add(Dense(25))\n",
+    "model.add(Dense(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='mean_squared_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2664/2664 [==============================] - 52s 19ms/step - loss: 3.6538e-04\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x15ef21ae150>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train the model\n",
+    "model.fit(x_train, y_train, batch_size=1, epochs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the testing dataset\n",
+    "test_data = scaled_data[training_data_len - 60: , :]\n",
+    "\n",
+    "# Create the datasets x_test, y_test\n",
+    "x_test = []\n",
+    "y_test = dataset[training_data_len:, :]\n",
+    "\n",
+    "for i in range(60, len(test_data)):\n",
+    "    x_test.append(test_data[i - 6:i, 0])\n",
+    "    \n",
+    "# Converte the data to a np array\n",
+    "x_test = np.array(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reshape the data into 3D\n",
+    "x_test = np.reshape(x_test, (x_test.shape[0], x_test.shape[1], 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "in user code:\n\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\engine\\training.py\", line 2169, in predict_function  *\n        return step_function(self, iterator)\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\engine\\training.py\", line 2155, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\engine\\training.py\", line 2143, in run_step  **\n        outputs = model.predict_step(data)\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\engine\\training.py\", line 2111, in predict_step\n        return self(x, training=False)\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\engine\\input_spec.py\", line 298, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Input 0 of layer \"sequential\" is incompatible with the layer: expected shape=(None, 60, 1), found shape=(None, 6, 1)\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Models predicted price values\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m predictions \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mpredict(x_test)\n\u001b[0;32m      3\u001b[0m predictions \u001b[39m=\u001b[39m scaler\u001b[39m.\u001b[39minverse_transform(predictions)\n",
+      "File \u001b[1;32me:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Temp\\__autograph_generated_fileb68of9o_.py:15\u001b[0m, in \u001b[0;36mouter_factory.<locals>.inner_factory.<locals>.tf__predict_function\u001b[1;34m(iterator)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     14\u001b[0m     do_return \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m     retval_ \u001b[39m=\u001b[39m ag__\u001b[39m.\u001b[39mconverted_call(ag__\u001b[39m.\u001b[39mld(step_function), (ag__\u001b[39m.\u001b[39mld(\u001b[39mself\u001b[39m), ag__\u001b[39m.\u001b[39mld(iterator)), \u001b[39mNone\u001b[39;00m, fscope)\n\u001b[0;32m     16\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[0;32m     17\u001b[0m     do_return \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: in user code:\n\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\engine\\training.py\", line 2169, in predict_function  *\n        return step_function(self, iterator)\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\engine\\training.py\", line 2155, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\engine\\training.py\", line 2143, in run_step  **\n        outputs = model.predict_step(data)\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\engine\\training.py\", line 2111, in predict_step\n        return self(x, training=False)\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"e:\\git\\StockPricePrediction-NN\\.venv\\Lib\\site-packages\\keras\\engine\\input_spec.py\", line 298, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Input 0 of layer \"sequential\" is incompatible with the layer: expected shape=(None, 60, 1), found shape=(None, 6, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Models predicted price values\n",
+    "predictions = model.predict(x_test)\n",
+    "predictions = scaler.inverse_transform(predictions)"
    ]
   }
  ],
