added some code

--- a/StockPricePrediction.ipynb
+++ b/StockPricePrediction.ipynb
@@ -400,12 +400,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(681, 6, 1)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Reshape the data into 3D\n",
-    "x_test = np.reshape(x_test, (x_test.shape[0], x_test.shape[1], 1))"
+    "x_test = np.reshape(x_test, (x_test.shape[0], x_test.shape[1], 1))\n",
+    "x_test.shape"
    ]
   },
   {
